deploy/supermario.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supermario
spec:
  replicas: 2
  selector:
    matchLabels:
      app: supermario
  template:
    metadata:
      labels:
        app: supermario
    spec:
      containers:
        - name: supermario
          image: pengbai/docker-supermario
---
apiVersion: v1
kind: Service
metadata:
  name: supermario-service
spec:
  selector:
    app: supermario
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
